--- a/SimpleFullTextSearcher/SimpleFullTextSearcher.csproj
+++ b/SimpleFullTextSearcher/SimpleFullTextSearcher.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="pavi.pavi.pdfgen" Version="1.0.0" />
+    <PackageReference Include="PdfPig" Version="0.1.9" />
+  </ItemGroup>
+
 </Project>
